# MFG_AGENT

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  render.yaml  vercel.json
.github/workflows/: deploy.yml
backend/: __main__.py  app.py  config.py
backend/agents/: __init__.py  base.py  orchestrator.py  researcher.py  state.py  writer.py
backend/auth/: __init__.py  firebase.py
backend/db/: __init__.py  chroma.py  models.py  store.py
backend/scraper/: __init__.py  config.py  engine.py  parser.py
backend/scraper/sources/: __init__.py  directories.py  duckduckgo.py  serper.py  tavily.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
static/: app.html  index.html
static/css/: app.css  auth.css  vars.css
static/js/: api.js  app.js  firebase.js  ui.js
